--- a/src/i18n/locales/kz.json
+++ b/src/i18n/locales/kz.json
@@ -15,7 +15,6 @@
       "analytics": "Аналитика"
     },
     "welcomeBack": "Қайта оралдыңыз, {{name}}",
-    "spiritAnimalAnalysis": "Рухани жануарды талдау",
     "celebrity": {
       "header": "Өзіңнің танымал тұлға-егізіңді тап",
       "subheader": "Қай танымал тұлғаға ұқсайтыныңды білгің келе ме? Фотосурет жүктеп көр!",
@@ -35,6 +34,7 @@
       "analyzeButton": "Түстерді талдау"
     },
     "animal": {
+      "header": "Рухани жануарды талдау",
       "subheader": "ИИ көмегімен ішкі рухани жануарыңызды табыңыз",
       "uploadButton": "Фотосурет жүктеу"
     },
