--- a/src/i18n/locales/kz.json
+++ b/src/i18n/locales/kz.json
@@ -34,9 +34,9 @@
       "analyzeButton": "Түстерді талдау"
     },
     "animal": {
-      "header": "Рухани жануарды талдау",
-      "subheader": "ИИ көмегімен ішкі рухани жануарыңызды табыңыз",
-      "uploadButton": "Фотосурет жүктеу"
+      "header": "Өзіңіздің рухани жануарыңызды табыңыз",
+      "subheader": "Ішкі болмысыңызды білдіретін жануарды білу үшін фотосуретіңізді жүктеңіз.",
+      "findAnimal": "Менің жануарымды анықта"
     },
     "sections": {
       "spiritAnimal": "Рухани жануар",
@@ -45,8 +45,9 @@
       "settings": "Баптаулар"
     },
     "result": {
-      "title": "Нәтиже",
-      "yourPhoto": "Сіздің фотоңыз",
+      "title": "Міне, сіздің сәйкестігіңіз!",
+      "yourPhoto": "Сіздің фотосуретіңіз",
+      "yourSpiritAnimal": "Сіздің рухани жануарыңыз",
       "prev": "Алдыңғы",
       "next": "Келесі",
       "tryAnother": "Басқа фотоны көру"
