--- a/src/i18n/locales/kz.json
+++ b/src/i18n/locales/kz.json
@@ -29,8 +29,8 @@
       "findTwin": "Егізіңді тап!"
     },
     "color": {
-      "header": "Түс талдауы",
-      "subheader": "Өзіңізге мінсіз түс палитрасы мен маусымдық типті табыңыз",
+      "header": "Фотосуретіңіздің түстерін талдау",
+      "subheader": "Суретіңіздің бірегей көңіл-күйі мен палитрасын ашыңыз.",
       "analyzeButton": "Түстерді талдау"
     },
     "animal": {
