--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -31,8 +31,8 @@
       "findTwin": "Найти моего двойника!"
     },
     "color": {
-      "header": "Анализ цвета",
-      "subheader": "Подберите идеальную цветовую палитру и сезонный тип",
+      "header": "Анализ цветов вашего фото",
+      "subheader": "Узнайте уникальное настроение и палитру вашего изображения.",
       "analyzeButton": "Анализировать цвета"
     },
     "animal": {
