--- a/src/i18n/locales/kz.json
+++ b/src/i18n/locales/kz.json
@@ -33,6 +33,14 @@
       "subheader": "Суретіңіздің бірегей көңіл-күйі мен палитрасын ашыңыз.",
       "analyzeButton": "Түстерді талдау"
     },
+    "gender": {
+      "header": "Гендерлік талдау",
+      "subheader": "Біздің AI сіздің фотоңызға қарап не ойлайтынын біліңіз.",
+      "analyzeButton": "Гендерді талдау",
+      "resultTitle": "AI үкімі",
+      "basedOnPhoto": "Анықталған жыныс",
+      "orientation": "Болжалды бейімділік"
+    },
     "animal": {
       "header": "Өзіңіздің рухани жануарыңызды табыңыз",
       "subheader": "Ішкі болмысыңызды білдіретін жануарды білу үшін фотосуретіңізді жүктеңіз.",
