--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -35,6 +35,14 @@
       "subheader": "Узнайте уникальное настроение и палитру вашего изображения.",
       "analyzeButton": "Анализировать цвета"
     },
+    "gender": {
+      "header": "Гендерный анализ",
+      "subheader": "Узнайте, что думает наш AI, основываясь на вашем фото.",
+      "analyzeButton": "Анализировать гендер",
+      "resultTitle": "Вердикт ИИ",
+      "basedOnPhoto": "Определенный пол",
+      "orientation": "Предполагаемая склонность"
+    },
     "animal": {
       "header": "Узнайте свое духовное животное",
       "subheader": "Загрузите фото, чтобы узнать, какое животное отражает вашу сущность.",
